--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
 	"minimum-stability": "dev",
 	"require": {
 		"php": ">=7.4",
-		"pozitronik/yii2-helpers": "dev-master"
+		"pozitronik/yii2-helpers": "dev-master",
+		"pozitronik/yii2-traits": "dev-master"
 	},
 	"require-dev": {
 		"yiisoft/yii2": "dev-master"
