--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
 	"require": {
 		"php": ">=7.4",
 		"pozitronik/yii2-helpers": "dev-master",
-		"pozitronik/yii2-traits": "dev-master"
+		"pozitronik/yii2-traits": "dev-master",
+		"kartik-v/yii2-grid": "dev-master"
 	},
 	"require-dev": {
 		"yiisoft/yii2": "dev-master"
