--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 		"kartik-v/yii2-grid": "dev-master"
 	},
 	"require-dev": {
-		"yiisoft/yii2": "dev-master"
+		"yiisoft/yii2": "dev-master",
+		"yiisoft/yii2-bootstrap4": "~2.0.10"
 	},
 	"autoload": {
 		"psr-4": {
