--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 	"minimum-stability": "dev",
 	"require": {
 		"php": ">=8.0",
-		"pozitronik/yii2-traits": "dev-master",
+		"pozitronik/yii2-traits": "^1.0.0",
 		"kartik-v/yii2-grid": "dev-master"
 	},
 	"require-dev": {
