--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 	"require": {
 		"php": ">=8.0",
 		"pozitronik/yii2-traits": "^1.0.0",
-		"kartik-v/yii2-grid": "dev-master"
+		"kartik-v/yii2-grid": "^3.5.0"
 	},
 	"require-dev": {
 		"yiisoft/yii2": "dev-master",
